# contracts-analysis

./: .gitignore  CLAUDE.md  Dockerfile.dashboard  README.md  app.py  config.yaml  dashboard.py  pyproject.toml  start.sh  status.sh  stop.sh  tasks.py
.streamlit/: config.toml
backend/: app.py  requirements.txt
backend/controllers/: options_controller.py
backend/services/: options_service.py
backend/src/wtf_options/: app.py  config.py
backend/src/wtf_options/controllers/: options_controller.py
backend/src/wtf_options/services/: options_service.py
backend/src/wtf_options/utils/: log_util.py  market_data.py
backend/tests/: test_api.py
docs/: architecture.md  architecture.mmd  demo.tape  index.html
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: ANALYSIS.md
frontend/src/: Analysis.css  Analysis.jsx  App.jsx  config.js  config.local.js  config.public.js  main.jsx
k8s/: configmap.yaml  deployment.yaml  service.yaml
tests/: test_p0_fixes.py
