[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contracts-analysis"
version = "0.2.0"
authors = [
  { name = "Prafful", email = "prafful.mehrotra@gmail.com" },
]
description = "Options screener dashboard"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "yfinance>=0.2.63",
    "pandas>=2.2.3",
    "py_vollib>=1.0.1",
    "pytz>=2024.2",
    "streamlit>=1.44.0",
    "plotly>=5.26.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[project.urls]
"Homepage" = "https://github.com/prafful13/contracts-analysis"

[tool.setuptools.packages.find]
where = ["backend/src"]
